[package]
name = "nixos-cache-signing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
base64 = "0.21.4"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", default-features = false, features = ["issue-url", "tracing-error", "capture-spantrace", "color-spantrace"] }
dryoc = "0.5.1"
hyper = "0.14.27"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
ssri = { version = "9.2.0", default-features = false }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
